--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tropa-digital",
+  "name": "tropa-digital-teste-frontend-andrew-crescencio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,7 +13,10 @@
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
+    "next-seo": "^5.15.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sharp": "^0.31.3",
+    "styled-components": "^5.3.6"
   }
 }
