--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
     "@next/font": "13.1.6",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "formik": "^2.2.9",
     "next": "13.1.6",
     "next-seo": "^5.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sharp": "^0.31.3",
     "styled-components": "^5.3.6"
+  },
+  "devDependencies": {
+    "@types/node": "18.11.19",
+    "@types/react": "18.0.27",
+    "typescript": "4.9.5"
   }
 }
